--- a/index.html
+++ b/index.html
@@ -7,12 +7,31 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">   
+    <link rel="stylesheet" href="style.css">
     <title>Betta Basics</title>
 </head>
 <body>
+    <header class="jumbotron jumbotron-fluid bg-info">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <h1>Betta Basics</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+<div class="container">
+    <div class="row">    
+        <div class="card col-6">
+            <p>Betta fish require a tank of at least 2.5 gallons. The bigger the better, though, a tank size of at least 5 gallons is preferred.</p>
+        </div>
+    </div> 
+</div>
 
 
-    
+
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
