Image in header

--- a/index.html
+++ b/index.html
@@ -19,16 +19,31 @@
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <h1>Betta Basics</h1>
                 </div>
+                <div>
+                    <img src="images/betta_flare.jpg" class="img-fluid">
+                </div>
             </div>
         </div>
     </header>
-<div class="container">
-    <div class="row">    
-        <div class="card col-6">
-            <p>Betta fish require a tank of at least 2.5 gallons. The bigger the better, though, a tank size of at least 5 gallons is preferred.</p>
-        </div>
-    </div> 
-</div>
+
+    <div class="container">
+        <div class="row">
+        <div class="col-12 text-center">     
+            <h2>General Requirements</h2>
+            </div>
+            <div class="row">
+                <div class="card justify-content-center bg-dark text-white col-sm-4">
+                    <p>Betta fish require a tank of at least 2.5 gallons at the very minimum. The bigger the better! A tank size of at least 5 gallons is preferred.</p>
+                </div>
+                <div class="card justify-content-center bg-dark text-white col-sm-4">
+                    <p>Betta fish tanks require an appropriately sized filter and heater</p>
+                </div>
+                <div class="card justify-content-center bg-dark text-white col-sm-4">
+                    <p>Temperature matters! Betta fish should be kept at temperatures between 75-82 degrees.</p>
+                </div>
+            </div>
+        </div> 
+    </div>
 
 
 
