--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="bettaNavbar">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-life-bouy fa-lg"></i> Setting Up Your First Aquarium</a></li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-leaf fa-lg"></i> Plants and Tank Mates</a></li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> FAQ</a></li>
@@ -41,6 +41,58 @@
             </nav>
         </div>
     </header>
+
+    <div class="row row-content">
+        <div class="col-12">
+            <h2>Send us your Betta Care Questions</h2>
+            <hr />
+        </div>
+        <div class="col-md-10">
+            <form class="ml-2">
+                <div class="row form-group">
+                    <label for="firstName" class="col-md-2 col-form-label">First Name</label> 
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="row form-group">    
+                    <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+                    </div>
+                </div>
+               
+                <div class="row form-group">
+                    <label for="email" class="col-md-2 col-form-label">Email</label>
+                    <div class="col-md-10"> 
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col offset-md-2">    
+                        May we email you directly?
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes"> 
+                            <label for="contactYes">Yes</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no"> 
+                            <label for="contactNo">No</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row form-group">   
+                    <label for="feedback" class="col-md-2 col-form-label">Your Question</label> 
+                    <div class="col-md-10">
+                        <textarea name="feedback" class="form-control" id="feedback" rows="8"></textarea>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="offset-md-2 col-md-10">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>       
+            </form>
 
     <footer class="site-footer">
         <div class="container">
