--- a/faq.html
+++ b/faq.html
@@ -24,102 +24,125 @@
                     <h1>Betta Basics</h1>
                 </div>
             </div>
-            <nav class="navbar navbar-expand-sm navbar-dark py-3">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bettaNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="bettaNavbar">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-life-bouy fa-lg"></i> Setting Up Your First Aquarium</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-leaf fa-lg"></i> Plants and Tank Mates</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> FAQ</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb bg-info">
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">FAQ</li>
+                </ol>
+              </nav>
         </div>
     </header>
 
-    <div class="row row-content">
-        <div class="col-12">
-            <h2>Send us your Betta Care Questions</h2>
-            <hr />
-        </div>
-        <div class="col-md-10">
-            <form class="ml-2">
-                <div class="row form-group">
-                    <label for="firstName" class="col-md-2 col-form-label">First Name</label> 
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
-                    </div>
-                </div>
-                <div class="row form-group">    
-                    <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
-                    </div>
-                </div>
-               
-                <div class="row form-group">
-                    <label for="email" class="col-md-2 col-form-label">Email</label>
-                    <div class="col-md-10"> 
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col offset-md-2">    
-                        May we email you directly?
-                        <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes"> 
-                            <label for="contactYes">Yes</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no"> 
-                            <label for="contactNo">No</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row form-group">   
-                    <label for="feedback" class="col-md-2 col-form-label">Your Question</label> 
-                    <div class="col-md-10">
-                        <textarea name="feedback" class="form-control" id="feedback" rows="8"></textarea>
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="offset-md-2 col-md-10">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>       
-            </form>
-
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                    <h5 class="text-white">Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="gen-req">General Requirements</a></li>
-                        <li><a href="#">Setting Up Your First Aquarium</a></li>
-                        <li><a href="#">Plants and Tank Mates</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5 class="text-white">Social</h5>
-                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <h5 class="text-white">Contact Us</h5>
-                        <a role="button" class="btn text-white btn-link" href="mailto:betta@bettabasics.co"><i class="fa fa-envelope-o"></i> betta@bettabasics.co </a>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2>Frequently Asked Questions</h2>
+                <hr>
             </div>
-        </div>        
-    </footer>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h3>Can two betta fish be kept together in the same tank?</h3>
+            </div>  
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p>No they cannot. Betta fish are highly aggressive and will fight any male or female betta fish placed in the tank. </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h3>Is it true that betta fish can survive by eating the roots of plants?</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p>No, this is a myth. Betta fish are insectivores: they need insect-based protein in their diet. The bulk of their diet should be a pellet formulated for betta fish. </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row row-content">
+            <div class="col-12">
+                <h2>Send us your Betta Care Questions</h2>
+                <hr />
+            </div>
+            <div class="col-md-10">
+                <form class="ml-2">
+                    <div class="row form-group">
+                        <label for="firstName" class="col-md-2 col-form-label">First Name</label> 
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="row form-group">    
+                        <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+                        </div>
+                    </div>
+                
+                    <div class="row form-group">
+                        <label for="email" class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10"> 
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col offset-md-2">    
+                            <p>May we email you directly?</p>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes"> 
+                                <label for="contactYes">Yes</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no"> 
+                                <label for="contactNo">No</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row form-group">   
+                        <label for="feedback" class="col-md-2 col-form-label">Your Question</label> 
+                        <div class="col-md-10">
+                            <textarea name="feedback" class="form-control" id="feedback" rows="8"></textarea>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>       
+                </form>
+            </div>
+        </div>
+
+            <footer class="site-footer">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-4 col-sm-2 offset-1">
+                            <h5 class="text-white">Links</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="index.html/#gen-req">General Requirements</a></li>
+                                <li><a href="index.html/#aquarium">Setting Up Your First Aquarium</a></li>
+                                <li><a href="#plants">Plants and Tank Mates</a></li>
+                                <li><a role="button" data-toggle="modal" data-target="#questionModal">Ask a Betta Care Question</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-sm-5 text-center">
+                            <h5 class="text-white">Social</h5>
+                                <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                                <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                                <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                        </div>
+                        <div class="col-4 col-sm-4 text-center">
+                                <h5 class="text-white">Contact Us</h5>
+                                <a role="button" class="btn text-white btn-link" href="mailto:betta@bettabasics.co"><i class="fa fa-envelope-o"></i> betta@bettabasics.co </a>
+                        </div>
+                    </div>
+                </div>        
+            </footer>
 
 
 
