--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#aquarium"><i class="fa fa-life-bouy fa-lg"></i> Setting Up Your First Aquarium</a></li>
                             <li class="nav-item"><a class="nav-link" href="#plants"><i class="fa fa-leaf fa-lg"></i> Plants and Tank Mates</a></li>
+                            <li class="nav-item"><a class="nav-link" href="faq.html"><i class="fa fa-question-circle fa-lg"></i> FAQ</a></li>
                             <li class="nav-item"><a class="nav-link" role="button" data-toggle="modal" data-target="#questionModal"><i class="fa fa-info fa-lg"></i> Ask a Betta Care Question</a></li>
                         </ul>
                     </div>
@@ -165,7 +166,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="justify-content-center col-12">
-                                <p>Temperature matters! Betta fish should be kept at temperatures between 77-82 degrees.</p>
+                                <p>Water temperature matters! Betta fish should be kept at temperatures between 77-82 degrees.</p>
                             </div>
                         </div>
                     </div> 
@@ -224,22 +225,22 @@
               <div class="carousel-item active" data-interval="10000">
                 <img class="d-block w-100" src="images/empty-aquarium.jpg" alt="Empty Aquarium">
                 <div class="carousel-caption d-none d-sm-block">
-                    <h5>Lorem Ipsum</h5>
-                    <p>Lorem Ipsum</p>
+                    <h5>Step One</h5>
+                    <p>Assemble supplies and place the tank on a stable surface away from direct sunlight.</p>
                 </div>
               </div>
               <div class="carousel-item" data-interval="10000">
                 <img class="d-block w-100" src="images/aquarium.jpg" alt="Filled tank with aquascaping">
                 <div class="carousel-caption d-none d-sm-block">
-                    <h5>Lorem Ipsum</h5>
-                    <p>Lorem Ipsum</p>
+                    <h5>Step Two</h5>
+                    <p>Fill and decorate the tank and wait for the tank to cycle.</p>
                 </div>
               </div>
               <div class="carousel-item" data-interval="10000">
                 <img class="d-block w-100 aquarium-setup-1" src="images/king-betta.jpg" alt="Betta in tank">
                 <div class="carousel-caption d-none d-sm-block">
-                    <h5>Lorem Ipsum</h5>
-                    <p>Lorem Ipsum</p>
+                    <h5>Step Three</h5>
+                    <p>Once the tank is cycled, acclimate your betta fish to the tank slowly. Make sure to perform water changes weekly.</p>
                 </div>
               </div>
             </div>
@@ -257,22 +258,25 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis, dolorum similique repudiandae laborum esse itaque, nesciunt voluptas sapiente doloribus harum velit distinctio. Enim ratione eveniet et, earum modi voluptas!</p>
+            <h4>Tank Placement</h4>
+                <p>Make sure to place your tank on a stable surface away from direct sunlight. This will prevent unwanted algae and temperature fluctuations. Make sure that you have a heater, filter, thermometer and well-fitting tank lid or hood for your aquarium. Betta fish tend to jump out of tanks without lids!  </p>
             </div>
             <div class="col-md-6">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis, dolorum similique repudiandae laborum esse itaque, nesciunt voluptas sapiente doloribus harum velit distinctio. Enim ratione eveniet et, earum modi voluptas!</p>
+                <h4>Tank decoration</h4>
+                    <p>This is where you can get creative! Use sand or gravel as substrate (avoid large stones as waste can get trapped underneath) and integrate live or silk plants.</p>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis, dolorum similique repudiandae laborum esse itaque, nesciunt voluptas sapiente doloribus harum velit distinctio. Enim ratione eveniet et, earum modi voluptas!</p>
-            </div>
+            <h4>Tank cycling</h4>
+            <blockquote>    
+            <p>To start your cycle, add about a drop of ammonia per gallon of aquarium water. Your ammonia test should now show visible levels of this compound; keep testing a few times a week. Once the ammonia levels have dropped back to zero, dose again and continue testing. If all goes well, nitrites should start popping up soon as well: a sign things are heading in the right direction. Keep dosing whenever needed until both your ammonia and nitrites drop down to zero and you’re getting a visible nitrate reading. Congrats, you’ve got a cycled tank! Remember to keep adding a little bit of ammonia now and then to keep your beneficial bacteria alive until you’re ready to introduce your Betta. Do a large water change before the introduction to get the nitrates down to an acceptable level (ideally < 10).</p>
+            <footer class="blockquote-footer">Aquariadise.com</footer>
+        </blockquote>    
+        </div>
             <div class="col-md-6">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quis, dolorum similique repudiandae laborum esse itaque, nesciunt voluptas sapiente doloribus harum velit distinctio. Enim ratione eveniet et, earum modi voluptas!</p>
+                <h4>Tank maintenance</h4>
+                    <p>Perform water changes every week, around 10-25% of the tank's total volume. Siphon the gravel in order to remove any waste trapped underneath. Remember when replacing the water to use either a water conditioner or spring water and be sure that the temperature of the water you are adding back to the tank matches (or is very close to) the temperature of the water inside the tank. </p>
             </div>
         </div>
     </div>
@@ -285,23 +289,44 @@
                 </h2>
             </div>
         </div>
-        <div class="row">
-            <div class="card col-sm-4">
+        <div class="row justify-content-center">
+            <div class="card col-md-3">
                 <img src="images/anubias-nana.jpg" class="card-img-top" alt="Anubias nana">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Anubias nana is a slow-growing rhizome plant that can survive most mistakes that beginners can make.</p>
                 </div>
               </div>
-              <div class="card col-sm-4">
+              <div class="card col-md-3">
                 <img src="images/marimo.jpeg" class="card-img-top" alt="Marimo moss ball">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">These slow-growing balls of algae require very little maintenance. They can even be kept in tap water!</p>
                 </div>
               </div>
-              <div class="card col-sm-4">
-                <img src="images/anubias-nana.jpg" class="card-img-top" alt="Anubias nana">
+              <div class="card col-md-3">
+                <img src="images/java-fern.jpeg" class="card-img-top" alt="Java fern">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Java fern requires low to moderate lighting and is an easy to care for mid to background plant for beginners.</p>
+                </div>
+              </div>
+        </div>
+        <div class="row justify-content-center">
+            
+              <div class="card col-md-3">
+                <img src="images/tiger-nerite.jpeg" class="card-img-top" alt="Tiger nerite snail">
+                <div class="card-body">
+                  <p class="card-text">Nerite snails make great tankmates for betta fish, as long as they are not harrassed by the betta. Nerite snails make a good cleaning crew. They also only reproduce in brackish water, so they will not overrun a freshwater tank.</p>
+                </div>
+              </div>
+              <div class="card col-md-3">
+                <img src="images/cherry-shrimp.jpeg" class="card-img-top" alt="Anubias nana">
+                <div class="card-body">
+                  <p class="card-text">Shrimp, such as cherry or amano shrimp, are good tankmates for medium sized betta setups (around 10 gallons). Provided they have plenty of places to hide among plants and decor they should stay out of the betta's way. </p>
+                </div>
+              </div>
+              <div class="card col-md-3">
+                <img src="images/corycatfish.jpg" class="card-img-top" alt="Albino cory catfish">
+                <div class="card-body">
+                  <p class="card-text">Corydoras catfish are friendly bottom feeders that make good tankmates for larger betta fish setups (20 gallons or more).</p>
                 </div>
               </div>
         </div>
@@ -319,6 +344,7 @@
                         <li><a href="#gen-req">General Requirements</a></li>
                         <li><a href="#aquarium">Setting Up Your First Aquarium</a></li>
                         <li><a href="#plants">Plants and Tank Mates</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a role="button" data-toggle="modal" data-target="#questionModal">Ask a Betta Care Question</a></li>
                     </ul>
                 </div>
